// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`book sort by scene 1`] = `
Array [
  Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "the_space_ship",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "The space ship",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "You are the brave pilot of this ship",
            "type": "text",
          },
          Object {
            "content": ".
The trip is long and boring",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "Are you going to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get food",
                "type": "text",
              },
            ],
            "target": "/cantina",
            "title": undefined,
            "type": "link",
          },
          Object {
            "content": " or to ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": "get a rest",
                "type": "text",
              },
            ],
            "target": "/bedroom",
            "title": undefined,
            "type": "link",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  Object {
    "name": "cantina",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Cantina",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": " show playedCount ",
            "type": "text",
          },
        ],
        "type": "dynamic",
      },
      Object {
        "content": Array [
          Object {
            "content": " time you come here",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "The cantina is full with your crew having a good time",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "They are singing ",
            "type": "text",
          },
          Object {
            "content": "'oh my captain",
            "type": "text",
          },
          Object {
            "content": "' for the ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " show playedCount ",
                "type": "text",
              },
            ],
            "type": "dynamic",
          },
          Object {
            "content": " times",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You pick up a sandwich an put it in your bag ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " set bag sandwich 1 ",
                "type": "text",
              },
            ],
            "type": "dynamic",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": "You have ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " show bag sandwich ",
                "type": "text",
              },
            ],
            "type": "dynamic",
          },
          Object {
            "content": " with you",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "content": " test playedCount equals 1 ",
            "type": "text",
          },
          Object {
            "content": Array [
              Object {
                "content": " This is your first time here
    Will you come back ",
                "type": "text",
              },
              Object {
                "content": "? ",
                "type": "text",
              },
            ],
            "type": "trueCaseContent",
          },
          Object {
            "content": Array [
              Object {
                "content": " Should not you go somewhere else ",
                "type": "text",
              },
              Object {
                "content": "?
or what ",
                "type": "text",
              },
              Object {
                "content": "? ",
                "type": "text",
              },
            ],
            "type": "falseCaseContent",
          },
          Object {
            "content": " ",
            "type": "text",
          },
        ],
        "type": "dynamic",
      },
      Object {
        "type": "newline",
      },
    ],
  },
]
`;

exports[`splitByScene split the first scene 1`] = `
Object {
  "scene": Object {
    "name": "choose_your_story",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Choose your story",
            "type": "text",
          },
        ],
        "level": 1,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "This is a test adventure",
            "type": "text",
          },
          Object {
            "content": ", welcome",
            "type": "text",
          },
          Object {
            "content": ".",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "sourceLeft": Array [
    Object {
      "content": Array [
        Object {
          "content": "The space ship",
          "type": "text",
        },
      ],
      "level": 2,
      "type": "heading",
    },
    Object {
      "content": Array [
        Object {
          "content": "You are the brave pilot of this ship",
          "type": "text",
        },
        Object {
          "content": ".
The trip is long and boring",
          "type": "text",
        },
        Object {
          "content": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "Are you going to ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": "get food",
              "type": "text",
            },
          ],
          "target": "/cantina",
          "title": undefined,
          "type": "link",
        },
        Object {
          "content": " or to ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": "get a rest",
              "type": "text",
            },
          ],
          "target": "/bedroom",
          "title": undefined,
          "type": "link",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "Cantina",
          "type": "text",
        },
      ],
      "level": 2,
      "type": "heading",
    },
    Object {
      "content": Array [
        Object {
          "content": " show playedCount ",
          "type": "text",
        },
      ],
      "type": "dynamic",
    },
    Object {
      "content": Array [
        Object {
          "content": " time you come here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "The cantina is full with your crew having a good time",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "They are singing ",
          "type": "text",
        },
        Object {
          "content": "'oh my captain",
          "type": "text",
        },
        Object {
          "content": "' for the ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " show playedCount ",
              "type": "text",
            },
          ],
          "type": "dynamic",
        },
        Object {
          "content": " times",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "You pick up a sandwich an put it in your bag ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " set bag sandwich 1 ",
              "type": "text",
            },
          ],
          "type": "dynamic",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": "You have ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " show bag sandwich ",
              "type": "text",
            },
          ],
          "type": "dynamic",
        },
        Object {
          "content": " with you",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": " test playedCount equals 1 ",
          "type": "text",
        },
        Object {
          "content": Array [
            Object {
              "content": " This is your first time here
    Will you come back ",
              "type": "text",
            },
            Object {
              "content": "? ",
              "type": "text",
            },
          ],
          "type": "trueCaseContent",
        },
        Object {
          "content": Array [
            Object {
              "content": " Should not you go somewhere else ",
              "type": "text",
            },
            Object {
              "content": "?
or what ",
              "type": "text",
            },
            Object {
              "content": "? ",
              "type": "text",
            },
          ],
          "type": "falseCaseContent",
        },
        Object {
          "content": " ",
          "type": "text",
        },
      ],
      "type": "dynamic",
    },
    Object {
      "type": "newline",
    },
  ],
}
`;

exports[`splitByScene split the last scene 1`] = `
Object {
  "scene": Object {
    "name": "final_landing",
    "sceneContent": Array [
      Object {
        "content": Array [
          Object {
            "content": "Final landing",
            "type": "text",
          },
        ],
        "level": 2,
        "type": "heading",
      },
      Object {
        "content": Array [
          Object {
            "content": "congrats you made it",
            "type": "text",
          },
          Object {
            "content": "!",
            "type": "text",
          },
          Object {
            "content": "!",
            "type": "text",
          },
          Object {
            "content": "!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "sourceLeft": Array [],
}
`;
